# meta-learning

./: .gitignore  notes.md  pyproject.toml
hydra/example/: run.py
hydra/example/bash/: basic.sh  joblib.sh  submitit_local.sh  submitit_slurm.sh
hydra/example/config/: config.yaml
hydra/example/config/hydra/launcher/: custom_submitit_slurm.yaml  custom_submitit_slurm_full_1gpu.yaml
hydra/metatinyhar/: run.py
hydra/metatinyhar-pretrained/: run.py
hydra/metatinyhar-pretrained/bash/: basic.sh  submitit_slurm.sh
hydra/metatinyhar-pretrained/config/: config.yaml
hydra/metatinyhar/bash/: basic.sh  submitit_slurm.sh
hydra/metatinyhar/config/: config.yaml
hydra/tinyhar/: run.py
hydra/tinyhar/bash/: basic.sh  submitit_slurm.sh
hydra/tinyhar/config/: config.yaml
notebooks/: dual-head-train.ipynb  eval.ipynb  ltcnns.ipynb  meta-eval.ipynb  meta-train copy.ipynb  meta-train.ipynb  train.ipynb
scripts/: meta-train-pretrained.py  meta-train.py  train.py
scripts/style/: style-train.py
src/meta_learning/: __init__.py
src/meta_learning/adaption/: adaption.py  meta_tiny_har.py  set_encoder.py
src/meta_learning/lora/: hypernet.py  meta_tinyhar.py  set_encoders.py  set_encoders_class_aware.py
src/meta_learning/models/: tiny_har.py
src/meta_learning/style/: dual_head_set_classifier.py  dual_head_trainer.py  set_encoder.py
src/meta_learning/tracking/: __init__.py  base.py  factory.py  mlflow_tracker.py  null_tracker.py  wandb_tracker.py
src/meta_learning/training/: meta_trainer.py  run_config.py  trainer.py
src/meta_learning/utils/: logging.py
(+6 files in other folders)
